# passman

./: README.rst  pyproject.toml
src/app/: create-user.py  passman.py
