[tool.poetry]
name = "passman-password-manager"
version = "0.1.0"
description = "Passman, password manager"
authors = ["xyz"]

[tool.poetry.dependencies]
python = "^3.10"
bcrypt = "^4.0.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
